DT-17 Fix validation message icon wrapped by the message (#398)
* Fix validation message icon wrapped by the message

--- a/docs/assets/css/dialtone.css
+++ b/docs/assets/css/dialtone.css
@@ -1010,6 +1010,7 @@ legend .d-label {
 .d-validation-message::before {
   content: '';
   width: var(--su16);
+  min-width: var(--su16);
   height: var(--su16);
   margin-right: var(--su4);
 }
